2011-03-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl-macs.el (cl-byte-compile-block, cl-block-wrapper)
	(cl-block-throw, cl-byte-compile-throw): Use a compiler-macro rather
	than a `byte-compile' hook to optimize away unused CL blocks, so that
	also works for lexbind code.
	Move the code after define-compiler-macro.

2011-03-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/pcase.el (pcase-mutually-exclusive-predicates):
	Add byte-code-function-p.
	(pcase--u1): Remove left-over code from early development.
	Fix case of variable shadowing in guards and predicates.
	(pcase--u1): Add a new `let' pattern.

	* emacs-lisp/bytecomp.el: Remove the bytecomp- prefix now that we use
	lexical-binding.
	(byte-compile-outbuffer): Rename from bytecomp-outbuffer.
	* emacs-lisp/cl-macs.el (load-time-value):
	* emacs-lisp/cl.el (cl-compiling-file): Adjust to new name.

	* emacs-lisp/byte-opt.el (byte-compile-inline-expand): Make it work to
	inline lexbind interpreted functions into lexbind code.
	(bytedecomp-bytes): Not a dynamic var any more.
	(disassemble-offset): Get the bytes via an argument instead.
	(byte-decompile-bytecode-1): Use push.

2011-03-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* makefile.w32-in (COMPILE_FIRST): Fix up last change.
	* ldefs-boot.el: Revert to upstream's version.

2011-03-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help-fns.el (help-function-arglist):
	* emacs-lisp/bytecomp.el (byte-compile-arglist-warn):
	* subr.el (apply-partially): Adjust to new format.
	* emacs-lisp/disass.el (disassemble-internal): Catch closures.

2011-03-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (apply-partially): Move from subr.el; don't use lexical-let.
	(eval-after-load): Obey lexical-binding.
	* simple.el (apply-partially): Move to subr.el.
	* makefile.w32-in: Match changes in Makefile.in.
	(BIG_STACK_DEPTH, BIG_STACK_OPTS, BYTE_COMPILE_FLAGS): New vars.
	(.el.elc, compile-CMD, compile-SH, compile-always-CMD)